# Online-Mart-Backup-

./: compose.yaml  readme.md
productservice/: .env  Dockerfile.dev  pyproject.toml
productservice/app/: db.py  main.py  model.py  prod.proto  prod_pb2.py  settings.py
productservice/app/consumer/: product_consumer.py
productservice/app/crud/: product_crud.py
productservice/app/producer/: producer.py
productservice/app/routes/: catalog.py
userservice/: .env  pyproject.toml
userservice/app/: auth.py  db.py  main.py  model.py  seettings.py
userservice/app/user/: user.py
